--- a/homeworks/01/HW_1.ipynb
+++ b/homeworks/01/HW_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,57 +11,91 @@
     "    class Entry:\n",
     "        def __init__(self, key, value):\n",
     "            #TODO store key and value as attributes\n",
-    "            \n",
+    "            self.key=key\n",
+    "            self.value=value\n",
     "        def get_key(self):\n",
     "            #TODO return key\n",
-    "            \n",
+    "            return self.key\n",
     "        def get_value(self):\n",
     "            #TODO return value\n",
-    "            \n",
+    "            return self.value\n",
     "        def __eq__(self, other):\n",
     "            #TODO реализовать функцию сравнения\n",
     "            #Пояснения: self - текущий объект entry, other - какой-то другой объект\n",
     "            #Какое условие на равенство объектов в ассоциативном массиве?\n",
     "            #Если объекты равны, то метод должен возвращать True, иначе False\n",
+    "            return self.get_key()==other.get_key() \n",
     "    \n",
     "    def __init__(self, bucket_num = 64):\n",
     "        #TODO Создать массив для бакетов\n",
+    "        self.buckets=[None]*bucket_num\n",
     "\n",
     "    def get(self, key, default_value=None):\n",
     "        #TODO метод get, возвращающий значение, если оно присутствует, иначе default_value\n",
+    "        hash_key=self._get_index(self._get_hash(key))\n",
+    "        if self.buckets[hash_key] is not None:\n",
+    "            for i in self.buckets[hash_key]:\n",
+    "                if i.get_key()==key:\n",
+    "                    return i.get_value()\n",
+    "        return default_value\n",
     "\n",
     "    def put(self, key, value):\n",
     "        #TODO метод put, кладет значение по ключу, в случае, если ключ уже присутствует он его заменяет\n",
+    "        hash_key=self._get_index(self._get_hash(key))\n",
+    "        Note=self.Entry(key,value)\n",
+    "        if self.buckets[hash_key] is None:\n",
+    "            self.buckets[hash_key]=[Note]\n",
+    "            return True\n",
+    "        else:\n",
+    "            for i in range(0,len(self.buckets[hash_key]),1):\n",
+    "                if self.buckets[hash_key][i]==Note:\n",
+    "                    self.buckets[hash_key][i]=Note\n",
+    "                    return True\n",
+    "        self.buckets[hash_key].append(Note)\n",
+    "        return True\n",
     "\n",
     "    def __len__(self):\n",
     "        #TODO Возвращает количество Entry в массиве\n",
-    "\n",
+    "        count=0\n",
+    "        for i in self.buckets:\n",
+    "            if i is not None:\n",
+    "                for j in i:\n",
+    "                    count+=1\n",
+    "        return count\n",
     "    def _get_hash(self, key):\n",
     "        #TODO Вернуть хеш от ключа, по которому он кладется в бакет\n",
+    "        hash_0=0\n",
+    "        for char in str(key):\n",
+    "            hash_0+=ord(char)\n",
+    "        return hash_0\n",
     "\n",
     "    def _get_index(self, hash_value):\n",
     "        #TODO По значению хеша вернуть индекс элемента в массиве\n",
-    "        \n",
+    "        return hash_value%len(self.buckets)\n",
     "    def values(self):\n",
     "        #TODO Задание со звездочкой!\n",
     "        #Должен возвращать генератор или итератор значений (на самом деле итератор, но не принципиально, через генераторы проще ИМХО)\n",
+    "        return [j.get_value() for i in self.buckets if i is not None for j in i]\n",
     "        \n",
     "    def keys(self):\n",
     "        #TODO Задание со звездочкой!\n",
     "        #Должен возвращать генератор или итератор ключей (на самом деле итератор, но не принципиально, через генераторы проще ИМХО)\n",
+    "        return [j.get_key() for i in self.buckets if i is not None for j in i]\n",
     "        \n",
     "    def items(self):\n",
     "        #TODO Задание со звездочкой!\n",
     "        #Должен возвращать генератор или итератор пар ключ и значение (tuples)\n",
     "        #(на самом деле итератор, но не принципиально, через генераторы проще ИМХО)\n",
+    "        return [(j.get_key(),j.get_value()) for i in self.buckets if i is not None for j in i ]\n",
     "        \n",
     "    def __str__(self):\n",
-    "        #TODO Метод, вызываемый при вызове print, пофантазируйте, что можно написать"
+    "        #TODO Метод, вызываемый при вызове print, пофантазируйте, что можно написать\n",
+    "        return str([(j.get_key(),j.get_value()) for i in self.buckets if i is not None for j in i ])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,18 +103,42 @@
     "   \n",
     "    def get(self, key, default_value=None):\n",
     "        #TODO достаточно переопределить данный метод\n",
+    "        hash_key=self._get_index(self._get_hash(key))\n",
+    "        if self.buckets[hash_key] is not None:\n",
+    "            for i in self.buckets[hash_key]:\n",
+    "                if i.get_key()==key:\n",
+    "                    return i.get_key()\n",
+    "        return default_value\n",
     "\n",
-    "    def put(self, key, value):\n",
+    "    def put(self, key, value='value'):\n",
     "        #TODO метод put, нужно переопределить данный метод\n",
+    "        hash_key=self._get_index(self._get_hash(key))\n",
+    "        Note=self.Entry(key,value)\n",
+    "        if self.buckets[hash_key] is None:\n",
+    "            self.buckets[hash_key]=[Note]\n",
+    "            return True\n",
+    "        else:\n",
+    "            for i in range(0,len(self.buckets[hash_key]),1):\n",
+    "                if self.buckets[hash_key][i]==Note:\n",
+    "                    return True\n",
+    "        self.buckets[hash_key].append(Note)\n",
+    "        return True\n",
     "\n",
-    "    def __len__(self):\n",
-    "        #TODO Возвращает количество Entry в массиве\n",
+    " \n",
     "\n",
     "    def values(self):\n",
     "        #TODO Задание со звездочкой!\n",
     "        #Если делали, то нужно бы переопределить\n",
-    "        #Должен возвращать генератор или итератор значений (на самом деле итератор, но не принципиально, через генераторы проще ИМХО)"
+    "        #Должен возвращать генератор или итератор значений (на самом деле итератор, но не принципиально, через генераторы проще ИМХО)\n",
+    "        return [j.get_key() for i in self.buckets if i is not None for j in i]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
